Login and action filtering based on the policy now works. Seed.sql now contains the entire seed necessary for the system described in the lab exercise.